invalid_bool_test/invalid_bool_test_1.src
.IPPcode24
WRITE bool@1